[package]
name = "wanari-core"
version = "0.1.0"
authors = ["wgpu developers"]
edition = "2018"
description = "Core of ANARI implementation on wgpu-rs"
homepage = "https://github.com/gfx-rs/wanari"
repository = "https://github.com/gfx-rs/wanari"
keywords = ["graphics"]
license = "MPL-2.0"

[lib]

[features]
default = []

[dependencies]
wgpu = { version = "0.6", features = ["trace"] }
